Corrige pokemonForm que estaba fuera de comillas

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="loginBtn">Login</button>
     <div id="loginStatus"></div>
 
-    <form id=""pokemonForm">
+    <form id="pokemonForm">
         <input type="text" id="pokemonInput" palceholder="Nombre del bicho">
         <button type="submite">Buscar</button>
     </form>
